--- a/mosi/views/sus/templates/sus_table.jinja
+++ b/mosi/views/sus/templates/sus_table.jinja
@@ -11,6 +11,27 @@
                 Texti
             </th>
             <th>
+                <div class="btn-group" style="margin-bottom: -8px;">
+
+                    <form id='selectAllForm' method="POST" action="{{url_for('sus.sus_select_all', sus_id=sus.id)}}">
+                        {% for f in selectAllForm %}
+                            {{f}}
+                        {% endfor%}
+                        <button type='submit' id='selectAll' class='btn' style="margin-right: 0px;">
+                            <span class=''><i class="far fa-check-square text-success"></i></span>
+                        </button>
+                    </form>
+                    <form id='deselectAllForm' method="POST" action="{{url_for('sus.sus_select_all', sus_id=sus.id)}}">
+                        {% for f in deselectAllForm %}
+                            {{f}}
+                        {% endfor%}
+                        <button type='submit' id='selectAll' class='btn' style="margin-left: -5px;">
+                            <span class=''><i class="far fa-square text-success"></i></span>
+                        </button>
+                    </form>
+                </div>
+            </th>
+            <th>
             </th>
         </thead>
         <tbody>
@@ -30,6 +51,99 @@
 
                     <td>{{sus.text}}</td>
                     <td>
+                        <form class="sus-check-button" id="verificationForm" name="sus-{{sus.id}}" action="{{sus.ajax_edit_action}}" method="POST">
+                            {% for field in sus.selection_form %}
+                                
+                                {% if field.name == "selected" %}
+                                <div class="custom-control custom-switch">
+                                    {{field(checked=field.data, id="check-field", class_="")}}
+                                </div>
+                                {% endif %}
+                                
+                            {% endfor %}
+                        </form>
+                    </td>
+                    <td>
+                        <button id="deleteButton" name="{{sus.id}}" onClick="deletebutton(name)" class="btn btn-secondary btn-sm text-danger float-right" type="button" data-toggle='modal', data-target='#deleteModal'>
+                            {{macros.btn_icon('trash', 'r')}} Eyða
+                        </button>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<!--
+<div class='table-responsive'>
+    <table class='table'>
+        <thead>
+            <th>
+
+            </th>
+            <th>
+                Auðkenni setningar
+            </th>
+            <th>
+                Texti
+            </th>
+            <th>
+                Meðaleinkunn
+            </th>
+            <th>
+                <div class="btn-group" style="margin-bottom: -8px;">
+
+                    <form id='selectAllForm' method="POST" action="{{url_for('sus.sus_select_all', sus_id=sus.id)}}">
+                        {% for f in selectAllForm %}
+                            {{f}}
+                        {% endfor%}
+                        <button type='submit' id='selectAll' class='btn' style="margin-right: 0px;">
+                            <span class=''><i class="far fa-check-square text-success"></i></span>
+                        </button>
+                    </form>
+                    <form id='deselectAllForm' method="POST" action="{{url_for('sus.sus_select_all', sus_id=sus.id)}}">
+                        {% for f in deselectAllForm %}
+                            {{f}}
+                        {% endfor%}
+                        <button type='submit' id='selectAll' class='btn' style="margin-left: -5px;">
+                            <span class=''><i class="far fa-square text-success"></i></span>
+                        </button>
+                    </form>
+                </div>
+            </th>
+            <th>
+            </th>
+        </thead>
+        <tbody>
+            {% for sus in sus_list %}
+                <tr>
+                    <td>
+                        <audio id="audio-{{sus.custom_recording.id}}" src={{sus.custom_recording.get_download_url()}} type="audio/wav"></audio>
+                        <button type='button' class='btn btn-link btn-sm' onClick="play({{sus.custom_recording.id}})">
+                            <i id='playButtonIcon-{{sus.custom_recording.id}}' class='fa fa-play'></i>
+                        </button>
+                    </td>
+                    {% if sus.token %}
+                        <td><a href={{sus.token.get_url()}} class=''><code>{{sus.token.get_printable_id()}}</code></a></td>
+                    {% else %}
+                        <td>-</td>
+                    {% endif %}
+
+                    <td>{{sus.text}}</td>
+                    <td>{{sus.average_rating}}</td>
+                    <td>
+                        <form class="sus-check-button" id="verificationForm" name="sus-{{sus.id}}" action="{{sus.ajax_edit_action}}" method="POST">
+                            {% for field in sus.selection_form %}
+                                
+                                {% if field.name == "selected" %}
+                                <div class="custom-control custom-switch">
+                                    {{field(checked=field.data, id="check-field", class_="")}}
+                                </div>
+                                {% endif %}
+                                
+                            {% endfor %}
+                        </form>
+                    </td>
+                    <td>
                         <button id="deleteButton" name="{{sus.id}}" onClick="deletebutton(name)" class="btn btn-secondary btn-sm text-danger float-right" type="button" data-toggle='modal', data-target='#deleteModal'>
                             {{macros.btn_icon('trash', 'r')}} Eyða
                         </button>
@@ -40,5 +154,6 @@
     </table>
 </div>
 
+-->
 <script src='{{url_for("main.static", filename="js/listControls.js")}}'></script>
 
