--- a/mosi/views/sus/templates/sus_review_answers.jinja
+++ b/mosi/views/sus/templates/sus_review_answers.jinja
@@ -5,6 +5,14 @@
             <div>
                 <h3>Svör til yfirferðar</h3>
             </div>
+            <div class='col-12 mb-4'>
+                <a href='{{url_for("sus.sus_detail", sus_id=sus.id)}}'
+                class='btn btn-success btn-sm float-left mt-3 mb-5'
+                >
+                    {{macros.btn_icon('arrow-left', 'r')}}
+                    Til baka í yfirlit
+                </a>
+            </div>
 
             {% with sus=sus, answers=answers %}
                 {% include 'sus_review_answers_table.jinja'%}
