--- a/mosi/views/sus/templates/sus_test.jinja
+++ b/mosi/views/sus/templates/sus_test.jinja
@@ -18,7 +18,13 @@
     {{super()}}
 
     <script>
+    var isPlaying = false;
+    var currentId;
+    var audio;
+    var playButtonIcon;
     var numSusObjs = {{sus_list_stats}}['len'];
+    const max_plays = {{sus.max_listens}}
+    var clips_json = {};
         (function() {
             $('form textarea').keyup(function() {
                 
@@ -90,5 +96,59 @@
 
         updateUI()
 
+        function update_played_UI(){
+            for(const key in clips_json){
+                var id_text = '#num-played-' + key
+                $(id_text).text(clips_json[key]);
+                if(clips_json[key] >= max_plays){
+                    var btn_name = '#play-button-' + key
+                    $(btn_name).prop("disabled",true);
+                }
+            }
+        }
+
+        function play(id){
+            if(!(id in clips_json)){
+                clips_json[id] = 0
+            }
+            if(clips_json[id] < max_plays){
+                if(isPlaying){
+                    //stop
+                    isPlaying = false;
+                    playButtonIcon.removeClass('fa-stop').addClass('fa-play');
+                    audio.pause();
+                    audio.currentTime = 0;
+                    // play the other clip if another id was chosen
+                    if(id !== currentId){
+                        play(id);
+                    }
+                } else{
+                    //start
+                    //isPlaying = true;
+                    currentId = id;
+                    playButtonIcon = $("#playButtonIcon-"+id);
+                    audio = document.getElementById('audio-'+id);
+                    // set listeners
+                    audio.onplaying = function(){
+                        isPlaying = true;
+                    }
+                    audio.onpause = function(){
+                        isPlaying = false;
+                    }
+                    audio.onended = function(){
+                        playButtonIcon.removeClass('fa-stop').addClass('fa-play');
+                    }
+                    // play audio
+                    playButtonIcon.removeClass('fa-play').addClass('fa-stop');
+                    audio.play();
+                    clips_json[id] += 1
+                    update_played_UI()
+                }
+            }
+        }
+        function init(){
+            //clips_json = {}
+        }
+        //init()
     </script>
 {% endblock %}
