mos preperation and additions

--- a/mosi/views/mos/templates/mos.jinja
+++ b/mosi/views/mos/templates/mos.jinja
@@ -124,7 +124,9 @@
                         <li>(Áskilið) Dálkur 3 er setningin sjálf. </li>
                         <li>(Valkvætt) Dálkur 4 er númer á rödd, ef sama röddin les margar setningar þá á hún alltaf að bera sama númer hér </li>
                         <li>(Valkvætt) Dálkur 5 er númer á setningu, ef margar raddir lesa sömu setninguna þá þurfa þær allar að bera sama númar hér </li>
-                        <li>(Valkvætt) Dálkur 6 er spurning ef það á að bera upp spurningu fyrir notnendur. </li>
+                        <li>(Valkvætt) Dálkur 6 er númer á modeli sem býr til röddina. </li>
+                        <li>(Valkvætt) Dálkur 7 er spurning ef það á að bera upp spurningu fyrir notnendur. </li>
+                        
                         <br>
                         Sjá sýnidæmi
                     </p>
