--- a/mosi/views/mos/templates/take_mos_test.jinja
+++ b/mosi/views/mos/templates/take_mos_test.jinja
@@ -3,7 +3,7 @@
     <div class='row'>
         <div class='col-xl-6 offset-xl-3 col-md-8 offset-md-2 col-12'>
             <div class='card card-body'>
-                <h2>{{mos.printable_id}}</h2>
+                <h2>{{mos.get_display_name}}</h2>
                 {% if mos.form_text %}
                 <p class="pt-2">{{ mos.form_text }}</p>
                 {% endif %}
